--- a/style_mobile.css
+++ b/style_mobile.css
@@ -9,6 +9,7 @@
         background-color: white;
     }
 
+
     .mobile-container {
         /*max-width: 480px;*/
         margin: auto;
@@ -31,7 +32,7 @@
 
     .topnav a {
         color: white;
-        padding: 16px 16px;
+        padding: 16px 16px; 
         text-decoration: none;
         font-size: 17px;
         display: block;
@@ -182,8 +183,80 @@
         border-radius: 5px;
     }
 
+    h2 {
+        color: #111111;
+    }
+    .columns {
+        /*float: left;*/
+        width: 90%;
+        padding: 8px;
+        margin: 0 auto;
+        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+    }
+
+    .price {
+        list-style-type: none;
+        border: 1px solid #eee;
+        margin: 0;
+        padding: 0;
+        -webkit-transition: 0.3s;
+        transition: 0.3s;
+    }
+
+    .price:hover {
+        box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+    }
+
+    .price .header {
+        background-color: #111;
+        color: white;
+        font-size: 25px;
+    }
+
+    .price li {
+        border-bottom: 1px solid #eee;
+        padding: 20px;
+        color: black;
+        text-align: center;
+    }
+
+    .price .grey {
+        background-color: #eee;
+        font-size: 20px;
+    }
+
+    .button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 10px 25px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 18px;
+    }
+    .container_prijzen {
+        background-color: gainsboro;
+        width: 80%;
+        display: grid;
+        grid-template-columns: auto auto;
+        margin: 0 auto;
+    }
+
+
+
+
+
+
+
+
 
 }
+
+
+
+
+
+
 .div_om_active {
     margin: 0 auto;
     width: 40%;
